--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.engagementwallet">
+    package="com.audio.capture">
    <application
         android:label="engagementwallet"
         android:name="${applicationName}"
